[gd_scene load_steps=2 format=3 uid="uid://cvkvtb25je5tc"]

[ext_resource type="Script" uid="uid://b6avpqngxc0bg" path="res://menu.gd" id="1_lti8b"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lti8b")

[node name="MainMenu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MainMenu"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainMenu/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 110
text = "Woryn"

[node name="Label2" type="Label" parent="MainMenu/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Early alpha build built in 7 hours"
horizontal_alignment = 1

[node name="ServerButton" type="Button" parent="MainMenu/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Server"

[node name="ClientButton" type="Button" parent="MainMenu/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Client"

[node name="ServerMessage" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ServerMessage"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="ServerMessage/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "Client started as server"

[connection signal="pressed" from="MainMenu/HBoxContainer/VBoxContainer/ServerButton" to="." method="_on_server_button_pressed"]
[connection signal="pressed" from="MainMenu/HBoxContainer/VBoxContainer/ClientButton" to="." method="_on_client_button_pressed"]
